--- a/Rently/Views/Movies/Random.cshtml
+++ b/Rently/Views/Movies/Random.cshtml
@@ -1,8 +1,21 @@
-﻿@model Rently.Models.Movie
+﻿@model Rently.ViewModel.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+<h2>@Model.Movie.Name</h2>
 
+@if (Model.Customers.Count == 0)
+{
+    <p>No one has rented this movie yet.</p>
+}
+else
+{
+    <ul>
+        @foreach (var customer in Model.Customers)
+        {
+            <li>@customer.Name</li>
+        }
+    </ul>
+}
